# avito-ds-autumn

./: .dockerignore  .gitignore  Dockerfile  README.md  download.sh  pyproject.toml  requirements.txt  start.sh  yd-wget.py
notebooks/: README.md  bert_gap.py  bert_playground.py  cascade.py  crf.py  lstm_playground.py  plotting.py  re.py  subtoken_clean.py  train_playground.py
src/space_restorator/: __main__.py  cascade.py  dataset.py  predict.py  train.py
src/space_restorator/bert/: __init__.py  dataset.py  predict.py
src/space_restorator/bert_gap/: __init__.py  dataset.py  predict.py  train.py
src/space_restorator/crf/: __init__.py  dataset.py  predict.py  train.py
src/space_restorer/: __main__.py  cascade.py  service.py  validate.py
src/space_restorer/bert/: dataset.py  predict.py  train.py
src/space_restorer/bert_gap/: dataset.py  predict.py  train.py
