[project]
name = "avito-ds-autumn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "datasets==3.6.0",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch>=2.8.0",
    "transformers>=4.56.2",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "ipywidgets>=8.1.7",
    "jsonlines>=4.0.0",
    "pysimdjson>=7.0.2",
    "tensorboard>=2.20.0",
    "zstandard>=0.25.0",
]
